Bug 133183 - Right click modify style behavior is off
Summary: Right click modify style behavior is off
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-05-19 21:25 UTC by Telesto
Modified: 2020-09-16 07:48 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-05-19 21:25:43 UTC
Description:
Right click modify style behavior is off

Steps to Reproduce:
1. Open Writer
2. Open sidebar -> Styles
3. Select Footer (single click) -> blue bar
4. Right Click List heading + Modify


Actual Results:
Dialog for Footer is opening

Expected Results:
Dialog for List heading


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 7.0.0.0.alpha1+ (x64)
Build ID: f9790da286f2d2fa47f1748f8cfa6172c6622ca3
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: de-CH (nl_NL); UI: en-US
Calc: CL

but not in
5.2.5.
Comment 1 Telesto 2020-05-21 15:48:17 UTC
Bisected to
author	Caolán McNamara <caolanm@redhat.com>	2020-04-26 15:43:25 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-04-29 09:46:08 +0200
commit fe9a13dc0e6d1384416c2a2343223b33925fc925 (patch)
tree a43a8ea0cc46407b8932dced64cf34d595f3b3e9
parent cf36fe5eb41910c26d58fb25e54ccf2e0ee01365 (diff)
weld SfxTemplatePanelControl

https://cgit.freedesktop.org/libreoffice/core/commit/?id=fe9a13dc0e6d1384416c2a2343223b33925fc92

~/win64-6.5
$ git bisect good 1c6663f78a957ca7d233a90655020c06bca8c0ea is the first bad commit
commit 1c6663f78a957ca7d233a90655020c06bca8c0ea
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Wed Apr 29 01:10:01 2020 -0700

    source fe9a13dc0e6d1384416c2a2343223b33925fc925

    source fe9a13dc0e6d1384416c2a2343223b33925fc925

:040000 040000 8023f70c307255ce95a2475912db1d82615e9fa6 f73c11be345d18f012b2695f1ef6fb6cc7e30be7 M      instdir
Comment 2 Julien Nabet 2020-05-22 12:00:24 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 3 Caolán McNamara 2020-05-22 13:24:29 UTC
Current situation is that it works on the selected rows, rather than the one right click was on. It looks like the old case was that if the right-clicked on row wasn't selected then it was auto-selected so I guess we can make it do that again.
Comment 4 Commit Notification 2020-05-22 14:34:49 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2a7bb352a9d6aa74495c03872c8c6150cbfc7a50

Resolves: tdf#133183 select style under mouse on right click context menu

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.