Resolves: tdf#133183 select style under mouse on right click context menu

Change-Id: I4317f6702b7a0e172d059fe83614aab94845b201